--- a/capstone-react/package.json
+++ b/capstone-react/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "formik": "^1.5.8",
     "mdbootstrap": "^4.8.9",
     "mdbreact": "^4.19.2",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-draggable": "^4.0.3",
+    "react-google-login": "^5.0.5",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
