--- a/admin/package.json
+++ b/admin/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-toastify": "^5.4.0",
     "yup": "^0.27.0"
   },
   "scripts": {
