--- a/admin/package.json
+++ b/admin/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@trendmicro/react-sidenav": "^0.4.5",
+    "bootstrap": "^4.3.1",
     "mdbreact": "^4.21.0",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.0.0-beta.15",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
