--- a/capstone-react/package.json
+++ b/capstone-react/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.9.0",
     "react-draggable": "^4.0.3",
     "react-google-login": "^5.0.5",
+    "react-paypal-button-v2": "^2.6.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
